// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadarAnimation renders the radar at the default size 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "justifyContent": "center",
      },
      {
        "height": 260,
        "width": 260,
      },
    ]
  }
>
  <RNSVGSvgView
    align="xMidYMid"
    bbHeight={260}
    bbWidth={260}
    focusable={false}
    height={260}
    meetOrSlice={0}
    minX={0}
    minY={0}
    style={
      [
        {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        {
          "flex": 0,
          "height": 260,
          "width": 260,
        },
      ]
    }
    vbHeight={260}
    vbWidth={260}
    width={260}
  >
    <RNSVGGroup
      fill={
        {
          "payload": 4278190080,
          "type": 0,
        }
      }
    >
      <RNSVGDefs>
        <RNSVGRadialGradient
          cx="50%"
          cy="50%"
          fx="50%"
          fy="50%"
          gradient={
            [
              0,
              1082875126,
              1,
              9133302,
            ]
          }
          gradientTransform={null}
          gradientUnits={0}
          name="radar-glow"
          rx="60%"
          ry="60%"
        />
      </RNSVGDefs>
      <RNSVGRect
        fill={
          {
            "brushRef": "radar-glow",
            "type": 1,
          }
        }
        height="260"
        propList={
          [
            "fill",
          ]
        }
        width="260"
        x="0"
        y="0"
      />
    </RNSVGGroup>
  </RNSVGSvgView>
  <View
    animate={
      {
        "opacity": 0,
        "scale": 1.5,
      }
    }
    from={
      {
        "opacity": 0.5,
        "scale": 1,
      }
    }
    style={
      [
        {
          "alignItems": "center",
          "justifyContent": "center",
          "position": "absolute",
        },
        {
          "height": 260,
          "width": 260,
        },
      ]
    }
    transition={
      {
        "delay": 0,
        "duration": 3000,
        "easing": [Function],
        "loop": true,
        "type": "timing",
      }
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={260}
      bbWidth={260}
      focusable={false}
      height={260}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "flex": 0,
            "height": 260,
            "width": 260,
          },
        ]
      }
      vbHeight={260}
      vbWidth={260}
      width={260}
    >
      <RNSVGGroup
        fill={
          {
            "payload": 4278190080,
            "type": 0,
          }
        }
      >
        <RNSVGCircle
          cx="130"
          cy="130"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeOpacity",
            ]
          }
          r={30}
          stroke={
            {
              "payload": 4287323382,
              "type": 0,
            }
          }
          strokeOpacity={0.5}
          strokeWidth={1}
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
  <View
    animate={
      {
        "opacity": 0,
        "scale": 1.5,
      }
    }
    from={
      {
        "opacity": 0.5,
        "scale": 1,
      }
    }
    style={
      [
        {
          "alignItems": "center",
          "justifyContent": "center",
          "position": "absolute",
        },
        {
          "height": 260,
          "width": 260,
        },
      ]
    }
    transition={
      {
        "delay": 400,
        "duration": 3000,
        "easing": [Function],
        "loop": true,
        "type": "timing",
      }
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={260}
      bbWidth={260}
      focusable={false}
      height={260}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "flex": 0,
            "height": 260,
            "width": 260,
          },
        ]
      }
      vbHeight={260}
      vbWidth={260}
      width={260}
    >
      <RNSVGGroup
        fill={
          {
            "payload": 4278190080,
            "type": 0,
          }
        }
      >
        <RNSVGCircle
          cx="130"
          cy="130"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeOpacity",
            ]
          }
          r={60}
          stroke={
            {
              "payload": 4287323382,
              "type": 0,
            }
          }
          strokeOpacity={0.5}
          strokeWidth={1}
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
  <View
    animate={
      {
        "opacity": 0,
        "scale": 1.5,
      }
    }
    from={
      {
        "opacity": 0.5,
        "scale": 1,
      }
    }
    style={
      [
        {
          "alignItems": "center",
          "justifyContent": "center",
          "position": "absolute",
        },
        {
          "height": 260,
          "width": 260,
        },
      ]
    }
    transition={
      {
        "delay": 800,
        "duration": 3000,
        "easing": [Function],
        "loop": true,
        "type": "timing",
      }
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={260}
      bbWidth={260}
      focusable={false}
      height={260}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "flex": 0,
            "height": 260,
            "width": 260,
          },
        ]
      }
      vbHeight={260}
      vbWidth={260}
      width={260}
    >
      <RNSVGGroup
        fill={
          {
            "payload": 4278190080,
            "type": 0,
          }
        }
      >
        <RNSVGCircle
          cx="130"
          cy="130"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeOpacity",
            ]
          }
          r={90}
          stroke={
            {
              "payload": 4287323382,
              "type": 0,
            }
          }
          strokeOpacity={0.5}
          strokeWidth={1}
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
  <View
    animate={
      {
        "opacity": 0,
        "scale": 1.5,
      }
    }
    from={
      {
        "opacity": 0.5,
        "scale": 1,
      }
    }
    style={
      [
        {
          "alignItems": "center",
          "justifyContent": "center",
          "position": "absolute",
        },
        {
          "height": 260,
          "width": 260,
        },
      ]
    }
    transition={
      {
        "delay": 1200,
        "duration": 3000,
        "easing": [Function],
        "loop": true,
        "type": "timing",
      }
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={260}
      bbWidth={260}
      focusable={false}
      height={260}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "flex": 0,
            "height": 260,
            "width": 260,
          },
        ]
      }
      vbHeight={260}
      vbWidth={260}
      width={260}
    >
      <RNSVGGroup
        fill={
          {
            "payload": 4278190080,
            "type": 0,
          }
        }
      >
        <RNSVGCircle
          cx="130"
          cy="130"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeOpacity",
            ]
          }
          r={120}
          stroke={
            {
              "payload": 4287323382,
              "type": 0,
            }
          }
          strokeOpacity={0.5}
          strokeWidth={1}
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
  <View
    animate={
      {
        "rotate": "360deg",
      }
    }
    from={
      {
        "rotate": "0deg",
      }
    }
    style={
      [
        {
          "position": "absolute",
        },
        {
          "height": 260,
          "width": 260,
        },
      ]
    }
    transition={
      {
        "duration": 2800,
        "easing": [Function],
        "loop": true,
        "type": "timing",
      }
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={260}
      bbWidth={260}
      focusable={false}
      height={260}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "flex": 0,
            "height": 260,
            "width": 260,
          },
        ]
      }
      vbHeight={260}
      vbWidth={260}
      width={260}
    >
      <RNSVGGroup
        fill={
          {
            "payload": 4278190080,
            "type": 0,
          }
        }
      >
        <RNSVGDefs>
          <RNSVGLinearGradient
            gradient={
              [
                0,
                9133302,
                1,
                -1500816138,
              ]
            }
            gradientTransform={null}
            gradientUnits={0}
            name="radar-sweep"
            x1="0"
            x2="1"
            y1="0.5"
            y2="0.5"
          />
        </RNSVGDefs>
        <RNSVGPath
          d="M130 130 L250 130 A120 120 0 0 0 190 26 Z"
          fill={
            {
              "brushRef": "radar-sweep",
              "type": 1,
            }
          }
          propList={
            [
              "fill",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
  <RNSVGSvgView
    align="xMidYMid"
    bbHeight={260}
    bbWidth={260}
    focusable={false}
    height={260}
    meetOrSlice={0}
    minX={0}
    minY={0}
    style={
      [
        {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        {
          "flex": 0,
          "height": 260,
          "width": 260,
        },
      ]
    }
    vbHeight={260}
    vbWidth={260}
    width={260}
  >
    <RNSVGGroup
      fill={
        {
          "payload": 4278190080,
          "type": 0,
        }
      }
    >
      <RNSVGCircle
        cx="130"
        cy="130"
        fill={
          {
            "payload": 4294967295,
            "type": 0,
          }
        }
        propList={
          [
            "fill",
          ]
        }
        r="4"
      />
      <RNSVGCircle
        cx="130"
        cy="130"
        fill={null}
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
          ]
        }
        r="10"
        stroke={
          {
            "payload": 4287323382,
            "type": 0,
          }
        }
        strokeWidth="1.5"
      />
    </RNSVGGroup>
  </RNSVGSvgView>
</View>
`;

exports[`RadarAnimation respects a size override 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "justifyContent": "center",
      },
      {
        "height": 180,
        "width": 180,
      },
    ]
  }
>
  <RNSVGSvgView
    align="xMidYMid"
    bbHeight={180}
    bbWidth={180}
    focusable={false}
    height={180}
    meetOrSlice={0}
    minX={0}
    minY={0}
    style={
      [
        {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        {
          "flex": 0,
          "height": 180,
          "width": 180,
        },
      ]
    }
    vbHeight={260}
    vbWidth={260}
    width={180}
  >
    <RNSVGGroup
      fill={
        {
          "payload": 4278190080,
          "type": 0,
        }
      }
    >
      <RNSVGDefs>
        <RNSVGRadialGradient
          cx="50%"
          cy="50%"
          fx="50%"
          fy="50%"
          gradient={
            [
              0,
              1082875126,
              1,
              9133302,
            ]
          }
          gradientTransform={null}
          gradientUnits={0}
          name="radar-glow"
          rx="60%"
          ry="60%"
        />
      </RNSVGDefs>
      <RNSVGRect
        fill={
          {
            "brushRef": "radar-glow",
            "type": 1,
          }
        }
        height="260"
        propList={
          [
            "fill",
          ]
        }
        width="260"
        x="0"
        y="0"
      />
    </RNSVGGroup>
  </RNSVGSvgView>
  <View
    animate={
      {
        "opacity": 0,
        "scale": 1.5,
      }
    }
    from={
      {
        "opacity": 0.5,
        "scale": 1,
      }
    }
    style={
      [
        {
          "alignItems": "center",
          "justifyContent": "center",
          "position": "absolute",
        },
        {
          "height": 180,
          "width": 180,
        },
      ]
    }
    transition={
      {
        "delay": 0,
        "duration": 3000,
        "easing": [Function],
        "loop": true,
        "type": "timing",
      }
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={180}
      bbWidth={180}
      focusable={false}
      height={180}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "flex": 0,
            "height": 180,
            "width": 180,
          },
        ]
      }
      vbHeight={260}
      vbWidth={260}
      width={180}
    >
      <RNSVGGroup
        fill={
          {
            "payload": 4278190080,
            "type": 0,
          }
        }
      >
        <RNSVGCircle
          cx="130"
          cy="130"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeOpacity",
            ]
          }
          r={30}
          stroke={
            {
              "payload": 4287323382,
              "type": 0,
            }
          }
          strokeOpacity={0.5}
          strokeWidth={1}
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
  <View
    animate={
      {
        "opacity": 0,
        "scale": 1.5,
      }
    }
    from={
      {
        "opacity": 0.5,
        "scale": 1,
      }
    }
    style={
      [
        {
          "alignItems": "center",
          "justifyContent": "center",
          "position": "absolute",
        },
        {
          "height": 180,
          "width": 180,
        },
      ]
    }
    transition={
      {
        "delay": 400,
        "duration": 3000,
        "easing": [Function],
        "loop": true,
        "type": "timing",
      }
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={180}
      bbWidth={180}
      focusable={false}
      height={180}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "flex": 0,
            "height": 180,
            "width": 180,
          },
        ]
      }
      vbHeight={260}
      vbWidth={260}
      width={180}
    >
      <RNSVGGroup
        fill={
          {
            "payload": 4278190080,
            "type": 0,
          }
        }
      >
        <RNSVGCircle
          cx="130"
          cy="130"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeOpacity",
            ]
          }
          r={60}
          stroke={
            {
              "payload": 4287323382,
              "type": 0,
            }
          }
          strokeOpacity={0.5}
          strokeWidth={1}
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
  <View
    animate={
      {
        "opacity": 0,
        "scale": 1.5,
      }
    }
    from={
      {
        "opacity": 0.5,
        "scale": 1,
      }
    }
    style={
      [
        {
          "alignItems": "center",
          "justifyContent": "center",
          "position": "absolute",
        },
        {
          "height": 180,
          "width": 180,
        },
      ]
    }
    transition={
      {
        "delay": 800,
        "duration": 3000,
        "easing": [Function],
        "loop": true,
        "type": "timing",
      }
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={180}
      bbWidth={180}
      focusable={false}
      height={180}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "flex": 0,
            "height": 180,
            "width": 180,
          },
        ]
      }
      vbHeight={260}
      vbWidth={260}
      width={180}
    >
      <RNSVGGroup
        fill={
          {
            "payload": 4278190080,
            "type": 0,
          }
        }
      >
        <RNSVGCircle
          cx="130"
          cy="130"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeOpacity",
            ]
          }
          r={90}
          stroke={
            {
              "payload": 4287323382,
              "type": 0,
            }
          }
          strokeOpacity={0.5}
          strokeWidth={1}
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
  <View
    animate={
      {
        "opacity": 0,
        "scale": 1.5,
      }
    }
    from={
      {
        "opacity": 0.5,
        "scale": 1,
      }
    }
    style={
      [
        {
          "alignItems": "center",
          "justifyContent": "center",
          "position": "absolute",
        },
        {
          "height": 180,
          "width": 180,
        },
      ]
    }
    transition={
      {
        "delay": 1200,
        "duration": 3000,
        "easing": [Function],
        "loop": true,
        "type": "timing",
      }
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={180}
      bbWidth={180}
      focusable={false}
      height={180}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "flex": 0,
            "height": 180,
            "width": 180,
          },
        ]
      }
      vbHeight={260}
      vbWidth={260}
      width={180}
    >
      <RNSVGGroup
        fill={
          {
            "payload": 4278190080,
            "type": 0,
          }
        }
      >
        <RNSVGCircle
          cx="130"
          cy="130"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeOpacity",
            ]
          }
          r={120}
          stroke={
            {
              "payload": 4287323382,
              "type": 0,
            }
          }
          strokeOpacity={0.5}
          strokeWidth={1}
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
  <View
    animate={
      {
        "rotate": "360deg",
      }
    }
    from={
      {
        "rotate": "0deg",
      }
    }
    style={
      [
        {
          "position": "absolute",
        },
        {
          "height": 180,
          "width": 180,
        },
      ]
    }
    transition={
      {
        "duration": 2800,
        "easing": [Function],
        "loop": true,
        "type": "timing",
      }
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={180}
      bbWidth={180}
      focusable={false}
      height={180}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "flex": 0,
            "height": 180,
            "width": 180,
          },
        ]
      }
      vbHeight={260}
      vbWidth={260}
      width={180}
    >
      <RNSVGGroup
        fill={
          {
            "payload": 4278190080,
            "type": 0,
          }
        }
      >
        <RNSVGDefs>
          <RNSVGLinearGradient
            gradient={
              [
                0,
                9133302,
                1,
                -1500816138,
              ]
            }
            gradientTransform={null}
            gradientUnits={0}
            name="radar-sweep"
            x1="0"
            x2="1"
            y1="0.5"
            y2="0.5"
          />
        </RNSVGDefs>
        <RNSVGPath
          d="M130 130 L250 130 A120 120 0 0 0 190 26 Z"
          fill={
            {
              "brushRef": "radar-sweep",
              "type": 1,
            }
          }
          propList={
            [
              "fill",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
  <RNSVGSvgView
    align="xMidYMid"
    bbHeight={180}
    bbWidth={180}
    focusable={false}
    height={180}
    meetOrSlice={0}
    minX={0}
    minY={0}
    style={
      [
        {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        {
          "flex": 0,
          "height": 180,
          "width": 180,
        },
      ]
    }
    vbHeight={260}
    vbWidth={260}
    width={180}
  >
    <RNSVGGroup
      fill={
        {
          "payload": 4278190080,
          "type": 0,
        }
      }
    >
      <RNSVGCircle
        cx="130"
        cy="130"
        fill={
          {
            "payload": 4294967295,
            "type": 0,
          }
        }
        propList={
          [
            "fill",
          ]
        }
        r="4"
      />
      <RNSVGCircle
        cx="130"
        cy="130"
        fill={null}
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
          ]
        }
        r="10"
        stroke={
          {
            "payload": 4287323382,
            "type": 0,
          }
        }
        strokeWidth="1.5"
      />
    </RNSVGGroup>
  </RNSVGSvgView>
</View>
`;
